# grail_tamucc

./: .gitignore  GRAIL_Machine_Vision_Report.md  README.md  report_writeup.txt  requirements-training.txt
Prompts/: gpu_training_prompt.txt
docs/: model_export.md  vision_pipeline.md
models/lraspp_mobilenetv3/: config.yaml
scripts/: compile_768_norm.py  compile_blob.sh  confusion_matrix.py  export_to_openvino.sh  gen_table.py  monitor_training.py  overnight_9hr_sweep.bat  overnight_architecture.bat  overnight_augmentation.bat  overnight_grid_search.bat  overnight_stem_focus.bat  postprocess_test.py  reshuffle_splits.py  run_microgreen_demo.py  train_segmentation.py  validate_onnx.py  verify_norm.py
scripts/datasets/: __init__.py  base_adapter.py  cvppp.py  synthetic_plants.py
src/bringup/: package.xml  setup.py
src/bringup/config/: oak_params.yaml  perception_params.yaml  reachability_params.yaml  tf_params.yaml
src/bringup/launch/: bringup_perception.launch.py  bringup_with_reachability.launch.py
src/bringup/rviz/: perception.rviz
src/oak_depthai_wrapper/: package.xml  setup.cfg  setup.py
src/oak_depthai_wrapper/config/: oak_params.yaml
src/oak_depthai_wrapper/oak_depthai_wrapper/: oak_camera_node.py
src/plant_interfaces/: CMakeLists.txt  package.xml
src/plant_interfaces/msg/: CutPlan.msg  CutTarget.msg  OrganSegmentation.msg  StemNode.msg  StemNodes.msg
src/plant_perception/: package.xml  setup.cfg  setup.py
src/plant_perception/config/: perception_params.yaml
src/plant_perception/plant_perception/: perception_node.py
src/px100_integration/: package.xml  setup.cfg  setup.py
src/px100_integration/px100_integration/: reachability_checker.py
