<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the plant perception system</description>
  <maintainer email="grail@todo.todo">grail</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>oak_depthai_wrapper</exec_depend>
  <exec_depend>plant_perception</exec_depend>
  <exec_depend>plant_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
