<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px100_integration</name>
  <version>0.1.0</version>
  <description>Optional PincherX-100 integration stubs — reachability checking only (no hardware)</description>
  <maintainer email="grail@todo.todo">grail</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>plant_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
